--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 # Entangled Segmentation Hackathon Submission
 
-This project
+This project was meant to mix computer vision and quantum computing.
+
+@[rainclouded](https://github.com/rainclouded) is the only team member.
 
 
 # Run this
